# bomberman-remake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: asset_manager.h  bomb.h  debugger.h  enemy.h  entity_props.h  event_dispatcher.h  game.h  map.h  node.h  physics.h  player.h  scene.h  vector2.h
src/: asset_manager.c  bomb.c  debugger.c  enemy.c  event_dispatcher.c  game.c  main.c  map.c  physics.c  player.c  scene.c
